--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
         		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
     		</ul>
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there, I'm Nick Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+        		<h1>Nick LaBerge</h1>
+				<p>I'm a PhD student at the University of Colorado Boulder. I'm currently studying networks, data science, and conducting research in the science of science.
+ <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:hankquinlanhub@gmail.com">email</a></li>
-        		<li><a href="https://github.com/hankquinlan">github.com/hankquinlan</a></li>
+        		<li><a href="mailto:nicholas.laberge@colorado.edu">nicholas.laberge@colorado.edu</a></li>
+        		<li><a href="https://github.com/nlaberge">github.com/hankquinlan</a></li>
 			</ul>
 		</footer>
 	</body>
