--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:nicholas.laberge@colorado.edu">nicholas.laberge@colorado.edu</a></li>
-        		<li><a href="https://github.com/nlaberge">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/nlaberge">github.com/nlaberge</a></li>
 			</ul>
 		</footer>
 	</body>
