--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Nick LaBerge</h1>
-				<p>I'm a PhD student at the University of Colorado Boulder. I'm currently studying networks, data science, and conducting research in the science of science.
+				<p>I'm a PhD student at the University of Colorado Boulder. I'm currently studying networks and data science while conducting research in the science of science.
  <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
