--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
+			<img src="imgs/pinkMe.jpg" alt="Flowers in Chania">
         		<h1>Nick LaBerge</h1>
 				<p>I'm a PhD student at the University of Colorado Boulder. I'm currently studying networks and data science while conducting research in the science of science.
  <a href="/about">Read more about my life...</a></p>
