--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-			<img src="imgs/pinkMe.jpg" alt="A pink photo of me!" style="width:160px;height:106px;">
+			<img src="imgs/pinkMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+			<img src="imgs/goldMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+			<p style="clear: both;">
         		<h1>Nick LaBerge</h1>
 				<p>I'm a PhD student at the University of Colorado Boulder. I'm currently studying networks and data science while conducting research in the science of science.
  <a href="/about">Read more about my life...</a></p>
