--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,10 @@
-  
----
-layout: default
-title: About Nick
----
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>About Nick</title>
+		<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="css/main.css">
+	</head>
 
 		<div class="about">
 			<h1>About</h1>
@@ -14,3 +16,4 @@ title: About Nick
 				<li><a href="#">Another site you want to link to</a></li>
 				</ul>
 		</div>
+</html>
