--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Nick LaBerge
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-</div><!-- /.blurb -->
+	<img src="imgs/pinkMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+			<img src="imgs/goldMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+			<p style="clear: both;">
+        		<h1>Nick LaBerge</h1>
+				<p>I'm a PhD student at the University of Colorado Boulder. I'm currently studying networks and data science while conducting research in the science of science.
+ 			<a href="/about">Read more about my life...</a></p>
+ </div><!-- /.blurb -->
+
