--- a/about/index.html
+++ b/about/index.html
@@ -5,7 +5,7 @@ title: About Hank Quinlan
 
 		<div class="about">
 			<h1>About</h1>
-			<p>You can optionally insert a brief bio here. You went to this school, you studied that, you now work in this field with research interests in that subject. At your previous position at this place, you worked on this or that. You can list some of your significant accomplishments, awards, or recognition here as well. You live in this city with these animals and people. In your free time you like X, Y, and Z.</p>
+			<p>I was born in beautiful Tacoma, Washington, where I lived until moving to Claremont McKenna College in Southern California. In 2019 I graduated from CMC with a major in physics. Adam Landsberg was my undergraduate advisor. Now I'm working towards my PhD in computer science at CU Boulder studying complex systems in a lab under two advisors: Aaron Clauset and Dan Larremore. My boyfriend and I live in downtown Boulder where there is a lot to do and see. In my free time I like to ride my bike, run, climb rocks, ski, and create art.</p>
 
 			<ul class="contacts">
 				<li><a href="#">@TwitterHandle</a></li>
