--- a/about/index.html
+++ b/about/index.html
@@ -4,6 +4,8 @@ title: About Hank Quinlan
 ---
 
 		<div class="about">
+			<img src="imgs/pinkMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
+			<img src="imgs/goldMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
 			<h1>About</h1>
-			<p>I was born in beautiful Tacoma, Washington, where I lived until moving to <li><a href="www.cmc.edu">Claremont McKenna College</a></li> in Southern California. In 2019 I graduated from CMC with a major in physics. Adam Landsberg was my undergraduate advisor. Now I'm working towards my PhD in computer science at CU Boulder studying complex systems in a lab under two advisors: Aaron Clauset and Dan Larremore. My boyfriend and I live in downtown Boulder where there is a lot to see and do. In my free time I like to ride my bike, run, climb rocks, ski, and create art.</p>
+			<p>I was born in beautiful Tacoma, Washington, where I lived until moving to <a href="www.cmc.edu">Claremont McKenna College</a> in Southern California. In 2019 I graduated from CMC with a major in physics. Adam Landsberg was my undergraduate advisor. Now I'm working towards my PhD in computer science at CU Boulder studying complex systems in a lab under two advisors: Aaron Clauset and Dan Larremore. My boyfriend and I live in downtown Boulder where there is a lot to see and do. In my free time I like to ride my bike, run, climb rocks, ski, and create art.</p>
 		</div>
