--- a/twopersonplay/index.html
+++ b/twopersonplay/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h2>Install ESP32 Two Person Play Firmware</h2>
-    <esp-web-install-button manifest="firmware.json"></esp-web-install-button>
+    <esp-web-install-button manifest="https://nlaberge.github.io/twopersonplay/firmware.json"></esp-web-install-button>
 </body>
 </html>
