--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ title: Nick LaBerge
 			<img src="imgs/goldMe.jpg" style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;">
 			<p style="clear: both;">
         		<h1>Nick LaBerge</h1>
-				<p>I'm a PhD student at the University of Colorado Boulder. I'm a computational social scientist, currently researching the science of science.
+				<p>Data Scientist</p>
  			<a href="/about">Read more about my life...</a></p>
  </div><!-- /.blurb -->
 
